// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-bZQynM bwEwCs sc-htpNat hxsEuH"
>
  <input
    className="sc-EHOje hjysc"
    id=""
    mask={false}
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-bZQynM bwEwCs sc-htpNat hxsEuH"
>
  <input
    className="sc-EHOje hjysc"
    id="input-with-label"
    mask={false}
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  <label
    className="sc-bxivhb iYvfZD sc-bwzfXH eQhPVJ"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
  
</div>
`;

exports[`Input component  with a passwordLink prop should match the snapshot 1`] = `
<div
  className="sc-bZQynM bwEwCs sc-htpNat hxsEuH"
>
  <input
    className="sc-EHOje jDVffv"
    id=""
    mask={false}
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  
  <a
    className="sc-ifAKCX jOWiLq"
    href="http://www.catho.com.br/"
    title="Esqueceu a senha?"
  >
    Esqueceu a senha?
  </a>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-bZQynM bwEwCs sc-htpNat hxsEuH"
>
  <input
    className="sc-EHOje gSRaIc"
    id=""
    mask={false}
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="foo"
  />
  
  
  <div
    className="sc-bdVaJa kKTvpA"
  >
    Error message
  </div>
</div>
`;
